frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotcha-frontend
  namespace: gotcha

spec:
  replicas: 0

  selector:
    matchLabels:
      app: gotcha-frontend

  template:
    metadata:
      labels:
        app: gotcha-frontend

    spec:
      containers:
      - name: frontend
        image: 558050136406.dkr.ecr.eu-west-1.amazonaws.com/thbs-gotcha-frontend:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: gotcha-frontend-svc
  namespace: gotcha

spec:
  selector:
    app: gotcha-frontend

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
