Ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotcha-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: gotcha.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gotcha-frontend-svc
            port:
              number: 80
